syntax = "proto3";

option java_package = "de.niklasbednarczyk.nbweather.data.settings.proto.appearance";
option java_multiple_files = true;

message SettingsAppearanceProto {

  enum ThemeProto {
    LIGHT = 0;
    DARK = 1;
  }

  enum ColorSchemeProto {
    BLUE = 0;
    GREEN = 1;
    RED = 2;
    YELLOW = 3;
  }

  bool useDeviceTheme = 1;
  ThemeProto theme = 2;
  bool useDynamicColorScheme = 3;
  ColorSchemeProto colorScheme = 4;

}
